@@ -1069,6 +1069,7 @@
           02-08-09  Bfo     New procedure set_os9_state introduced and adapted everywhere.
           02-08-13  Bfo     The state <dead> will be handled correctly now (state=0x9100)
           02-08-13  Bfo     Some more variables defined at the real procid struct now.
+          02-08-13  Bfo     grp,usr and prior at the real prdsc now
     3.16  02-08-??  Bfo     ...
     -------------------
 */
